force-app/main/default/objects/Project_Execution_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Assigned_User__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Assigned_User__c</referenceTo>
        <relationshipLabel>Step 4:Project Execution Plan and Permit</relationshipLabel>
        <relationshipName>Step_4_Project_Execution_Plan_and_Permit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BE_Plan_Permit_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BE Plan Permit Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required</inlineHelpText>
        <label>Execution Plan File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWaitingForPreviousStep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWaitingForPreviousStep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id, &quot;Project Execution Plan&quot;,&quot;_self&quot;)</formula>
        <label>Work Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <defaultValue>4</defaultValue>
        <label>No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Project_Execution_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected User is not SME. Please select SME user.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>PM</value>
            </filterItems>
            <infoMessage>Please select SME user.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Step_4_Project_Execution_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Requisition__c</fullName>
        <label>Service Requisition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EP (Owner)</fullName>
                    <default>true</default>
                    <label>Engineering and Procurement by Owner</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>E ( Engineering )</label>
                </value>
                <value>
                    <fullName>EP</fullName>
                    <label>EP ( Engineering and Procurement )</label>
                </value>
                <value>
                    <fullName>EPCm</fullName>
                    <label>EPCm ( Engineering, Procurement and Construction Management )</label>
                </value>
                <value>
                    <fullName>EPC</fullName>
                    <label>EPC ( Engineering, Procurement and Construction )</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Status__c</fullName>
        <label>Submit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Submit_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiting_for_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting for Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Process_Status__c</fullName>
        <label>Work Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Work_Process_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Step 4:Project Execution Plan and Permit</label>
    <nameField>
        <displayFormat>WP4-{00000}</displayFormat>
        <label>Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Step_4_After_Submit</fullName>
        <active>true</active>
        <label>Step 4 : After Submit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Step_4_Before_Submit</fullName>
        <active>true</active>
        <label>Step 4 : Before Submit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>